# hw-examples

./: README.md  hw-examples.cabal  stack.yaml
apps/cli/hw-cat-minimal/: Main.hs
apps/cli/hw-cut-minimal/: Main.hs
apps/cli/hw-dos2unix/: Main.hs
apps/cli/hw-filestats/: Main.hs
src/: ConduitEx.hs  Examples.hs
src/TypeClass/: Declarations.hs  Examples.hs  Laws.hs
