name:                hw-examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hw-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hw-cat-minimal
  hs-source-dirs:      apps/cli/hw-cat-minimal
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hw-examples
  default-language:    Haskell2010

executable hw-cut-minimal
  hs-source-dirs:      apps/cli/hw-cut-minimal
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hw-examples
  default-language:    Haskell2010

executable hw-dos2unix
  hs-source-dirs:      apps/cli/hw-dos2unix
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hw-examples
  default-language:    Haskell2010

test-suite hw-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw-examples
